# evolve-framework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  agents.md  apm.lock.yaml  apm.yml  cliff.toml  debug_tracking.py  dev-stack.toml  docker-compose.yml  pyproject.toml  run-codeboarding.sh
.dev-stack/: hooks-manifest.json  instructions.md
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md  idea-to-speckit.agent.md  research-assistant.agent.md
.github/prompts/: 008-unified-config-completeness.prompt.md  AutoSpecKit.prompt.md
.github/workflows/: ci.yml  dev-stack-deploy.yml  dev-stack-tests.yml  dev-stack-vuln-scan.yml
.specify/memory/: constitution.md  evolve-framework.code-workspace
.specify/templates/: plan-template.md
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json  summary.json
docs/: Makefile  conf.py  index.rst
docs/adr/: 002-erp-extensibility.md
docs/api/: README.md  core.md  evolve.backends.accelerated.jax_evaluator.rst  evolve.backends.accelerated.rst  evolve.backends.accelerated.torch_evaluator.rst  evolve.backends.base.rst  evolve.backends.parallel.rst  evolve.backends.rst  evolve.backends.sequential.rst  evolve.config.callbacks.rst  evolve.config.erp.rst  evolve.config.espo.rst  evolve.config.merge.rst  evolve.config.meta.rst  evolve.config.multiobjective.rst  evolve.config.rst  evolve.config.schema.rst  evolve.config.stopping.rst  evolve.config.tracking.rst  evolve.config.unified.rst  evolve.core.callbacks.rst  evolve.core.engine.rst  evolve.core.operators.crossover.rst  evolve.core.operators.merge.rst  evolve.core.operators.mutation.rst  evolve.core.operators.rst  evolve.core.operators.selection.rst  evolve.core.operators.token_crossover.rst  evolve.core.operators.token_mutation.rst  evolve.core.population.rst  evolve.core.rst  evolve.core.stopping.rst  evolve.core.types.rst  evolve.diversity.islands.engine.rst  evolve.diversity.islands.island.rst  evolve.diversity.islands.migration.rst  evolve.diversity.islands.rst  evolve.diversity.islands.topology.rst  evolve.diversity.niching.rst  evolve.diversity.novelty.rst  (+93 more)
docs/guides/: advanced-configuration.md  erp-best-practices.md  metric-collectors-reference.md
docs/plans/: 2026-04-01-espo-benchmark-survey.md  2026-04-01-llm-representation-design.md
docs/tutorials/: 01-basic-ga.md  01_unified_config.ipynb  01_vector_genome.ipynb  02_sequence_genome.ipynb  02_vector_genome.ipynb  03_graph_genome_neat.ipynb  03_sequence_genome.ipynb  04_graph_genome_neat.ipynb  04_rl_neuroevolution.ipynb  05-experiment-tracking.md  05_rl_neuroevolution.ipynb  05_scm_multiobjective.ipynb  06_evolvable_reproduction_protocols.ipynb  06_scm_multiobjective.ipynb  07_evolvable_reproduction.ipynb  07_unified_config.ipynb  README.md
evolve/: __init__.py  agents.md
evolve/backends/: __init__.py  base.py  parallel.py  sequential.py
evolve/config/: __init__.py  callbacks.py  erp.py  espo.py  merge.py  meta.py  multiobjective.py  schema.py  stopping.py  tracking.py  unified.py
evolve/core/: __init__.py  callbacks.py  engine.py  population.py  stopping.py  types.py
evolve/diversity/: __init__.py  niching.py  novelty.py  speciation.py
evolve/evaluation/: __init__.py  benchmark.py  evaluator.py  llm_judge.py  scm_evaluator.py  task_spec.py  testing.py
evolve/experiment/: __init__.py  checkpoint.py  config.py  dry_run.py  metrics.py  runner.py
evolve/factory/: __init__.py  engine.py
evolve/meta/: __init__.py  codec.py  evaluator.py  result.py
evolve/multiobjective/: __init__.py  crowding.py  dominance.py  fitness.py  metrics.py  ranking.py  selection.py
evolve/registry/: __init__.py  callbacks.py  decoders.py  evaluators.py  genomes.py  operators.py
evolve/representation/: __init__.py  cppn_decoder.py  decoder.py  embedding.py  embedding_config.py  genome.py  graph.py  network.py  phenotype.py  scm.py  scm_decoder.py  sequence.py  vector.py
evolve/reproduction/: __init__.py  callbacks.py  crossover_protocol.py  engine.py  intent.py  matchability.py  mutation.py  protocol.py  recovery.py  sandbox.py
evolve/rl/: __init__.py  environment.py  evaluator.py  policy.py  rollout.py
evolve/utils/: __init__.py  dependencies.py  random.py  timing.py
examples/: mlflow_tracking_demo.py  protocol_evolution.py  sexual_selection.py  speciation_demo.py
scripts/: mlflow_diag.py
scripts/hooks/: pre-commit  prepare-commit-msg
specs/001-core-framework-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-evolvable-reproduction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-scm-representation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tutorial-notebooks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-unified-config-meta-evolution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-mlflow-metrics-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-llm-soft-prompt-evolution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-evaluator-registry-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-feature-cleanup-backlog/: audit-log.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-docs-unifiedconfig-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-es-hyperneat-decoder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-symbiogenetic-merge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-dry-run-statistics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-ensemble-metric-collector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: agents.md  conftest.py  e2e_dry_run_comparison.py  test_placeholder.py
(+212 files in other folders)
