[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "evolve-framework"
version = "0.1.0"
description = "A research-grade evolutionary algorithms experimentation framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Evolve Framework Team" },
]
keywords = [
    "evolutionary-algorithms",
    "genetic-algorithms",
    "neuroevolution",
    "optimization",
    "multi-objective",
    "NSGA-II",
    "reinforcement-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
    "networkx>=3.0",
    "typing_extensions>=4.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
pytorch = [
    "torch>=2.0.0",
]
llm = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
mlflow = [
    "mlflow>=2.0.0",
]
wandb = [
    "wandb>=0.15.0",
]
ray = [
    "ray>=2.0.0",
]
rl = [
    "gymnasium>=0.29.0",
]
tutorials = [
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "gymnasium>=0.29.0",
    "papermill>=2.4.0",
    "nbconvert>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "evolve-framework[pytorch,jax,llm,mlflow,wandb,ray,rl,tutorials,dev]",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=3.0",
    "pygments>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/evolve-framework/evolve"
Documentation = "https://github.com/evolve-framework/evolve#readme"
Repository = "https://github.com/evolve-framework/evolve"

[tool.hatch.build.targets.wheel]
packages = [
    "evolve",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "property: marks property-based tests",
    "benchmark: marks benchmark tests",
    "gpu: marks tests requiring GPU",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = [
    "evolve",
]
branch = true
omit = [
    "*/tests/*",
    "*/benchmarks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "jax.*",
    "mlflow.*",
    "wandb.*",
    "ray.*",
    "gymnasium.*",
    "pandas.*",
    "networkx.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
    "B008",
    "B905",
]

[tool.ruff.lint.per-file-ignores]
"docs/tutorials/*.ipynb" = ["E402"]
"tests/**" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = [
    "evolve",
]

[tool.dev-stack.hooks]
commit-msg = true
pre-push = true
pre-commit = true

[tool.dev-stack.branch]
pattern = "^(main|master|develop|feature/.+|bugfix/.+|hotfix/.+|release/.+|\\d{3}-.+)$"
exempt = [
    "main",
    "master",
]

[tool.dev-stack.signing]
required = false

[tool.dev-stack.pipeline]
visualize = true
